--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -83,12 +83,12 @@
 {% endif %}
 
 <link rel="stylesheet" href="https://www.hermko.de/layout/hermko/css/werk38.css" media="screen">
-<link rel="stylesheet" href="https://www.hermko.de/layout/hermko/css/print.css" media="print"> 
+<link rel="stylesheet" href="https://www.hermko.de/layout/hermko/css/print.css" media="print">
 
 {{ LayoutContainer.show("Ceres::Template.StyleOverwrite") }}
 
 <!-- Extend the existing style with a template -->
 {{ LayoutContainer.show("Ceres::Template.Style") }}
-
+<!--
 <script  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://www.hermko.de/layout/hermko/js/werk38.js"></script>
+<script src="https://www.hermko.de/layout/hermko/js/werk38.js"></script>-->
