--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -6,7 +6,7 @@
     {{ component( "Ceres::ItemList.Components.ItemListSorting" ) }}
     {{ component( "Ceres::ItemList.Components.ItemsPerPage" ) }}
     {{ component( "Ceres::ItemList.Components.Pagination" ) }}
-    {{ component( "Ceres::ItemList.Components.Filter.ItemFilterList") }}
+    {{ component( "Hermko::ItemList.Components.Filter.ItemFilterList") }}
     {{ component( "Ceres::ItemList.Components.Filter.ItemFilterTagList") }}
     {{ component( "Hermko::ItemList.Components.CategoryItem" ) }}
 
