--- a/resources/views/ItemList/ItemListView.twig
+++ b/resources/views/ItemList/ItemListView.twig
@@ -15,8 +15,8 @@
             <div class="col-xs-12 col-sm-3 columnLeft">
               <div class="border catDesc">
                 <h1 class="h2 category-title">Suche</h1>
-                    <div id="category-description-container" class="category-description m-b-1">{
-                      <h2>{{ trans("Ceres::Template.itemSearchResults") }}<br>{{ searchString }}</h2>                      
+                    <div id="category-description-container" class="category-description m-b-1">
+                      <h2>{{ trans("Ceres::Template.itemSearchResults") }}<br>{{ searchString }}</h2>
                     </div>
               </div>
    			        <div class="list-controls">
