--- a/resources/views/ItemList/Components/Filter/ItemFilter.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilter.twig
@@ -4,7 +4,7 @@
         <div v-if="facet.type === 'price'">
             <item-filter-price></item-filter-price>
         </div>
-        <div v-else-if="facet.value.length > 0">
+        <div v-else-if="facet.values.length > 0">
             <div class="form-check" v-for="value in facets" :key="value.id" v-if="value.count > 0">
                 <input :id="'option-' + value.id" class="form-check-input hidden-xs-up" type="checkbox" :checked="isSelected(value.id)" @change="updateFacet(value)" :disabled="isLoading">
                 <label :for="'option-' + value.id" class="form-check-label">
