--- a/resources/views/Checkout/Components/ShippingProfileSelect.twig
+++ b/resources/views/Checkout/Components/ShippingProfileSelect.twig
@@ -13,12 +13,9 @@
                 >
                 <label :for="'ShippingProfileID' +  _uid + shippingProfile.parcelServicePresetId">
                     <div class="icon">
-                        <img v-if="shippingProfile.parcelServicePresetId === 5" src="https://assets.aftership.com/couriers/svg/dhl.svg">
-                        <img v-if="shippingProfile.parcelServicePresetId === 6" src="https://assets.aftership.com/couriers/svg/dhl.svg">
-                        <img v-if="shippingProfile.parcelServicePresetId === 8" src="https://assets.aftership.com/couriers/svg/dhl.svg">
-                        <img v-if="shippingProfile.parcelServicePresetId === 10" src="https://assets.aftership.com/couriers/svg/dhl.svg">
-                        <img v-if="shippingProfile.parcelServicePresetId === 12" src="https://assets.aftership.com/couriers/svg/dhl.svg">
-                        <img v-if="shippingProfile.parcelServicePresetId === 13" src="https://assets.aftership.com/couriers/svg/dhl.svg">
+                        <img v-if="shippingProfile.parcelServicePresetId === 15" src="https://assets.aftership.com/couriers/svg/deutsch-post.svg">
+                        <img v-else-if="shippingProfile.parcelServicePresetId === 16" src="https://assets.aftership.com/couriers/svg/dpd.svg">
+                        <img v-else src="https://assets.aftership.com/couriers/svg/dhl.svg">
                     </div><!--
                     --><div class="content">
                         ${ shippingProfile.parcelServiceName } - ${ shippingProfile.parcelServicePresetName }
