--- a/resources/views/Homepage/HermkoHomepage.twig
+++ b/resources/views/Homepage/HermkoHomepage.twig
@@ -106,7 +106,33 @@
 
     {{ startArtikel.details.first.description2 | raw }}
 
-      {% set homepageContainer6 = LayoutContainer.show("Ceres::Homepage.Container6") %}
+
+    <div class="row">
+            {% set count = 1 %}
+            <div class="col-xs-12 col-sm-6 col-md-4 startArt">
+              <div class="border">
+                <h2>Top Produkte</h2>
+                <div class="category-description">
+                    <p>test</p>
+                </div>
+              </div>
+            </div>
+            {% for curCat in categories %}
+              {% set itemList = services.itemList.getItemList( 'category', curCat.id, null, 1000 ).documents %}
+                {% for item in itemList %}
+                  {% if  item.data.item.storeSpecial.id == 3 and count <= 3 %}
+                    <div class="col-xs-12 col-sm-6 col-md-4 startArt">
+                        {% include "Hermko::Category.Item.Partials.CategoryListItem" with { 'item': item } %}
+                    </div>
+                    {% set count = count + 1 %}
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+          </div>
+
+
+
+<!--      {% set homepageContainer6 = LayoutContainer.show("Ceres::Homepage.Container6") %}
       {% if categoryList1 is not empty or homepageContainer6 | trim is not empty %}
           <div class="topProdukte clearfix">
               {% if homepageContainer6 | trim is empty %}
@@ -158,6 +184,7 @@
                 {% endif %}
             </div>
         {% endif %}
+      -->
 
 
 
