--- a/resources/views/Homepage/HermkoHomepage.twig
+++ b/resources/views/Homepage/HermkoHomepage.twig
@@ -97,9 +97,9 @@
       {% set categoryStart  = services.category.get(411, lang) %}
     {% endif %}
 
-    <div class="row">
+    <div class="row homeArt">
             {% set count = 1 %}
-            <div class="col-xs-12 col-sm-6 col-md-3 startArt">
+            <div class="col-xs-12 col-sm-6 col-md-3 startArt first">
               <div class="border">
                 <h2>Top Produkte</h2>
                 <div class="category-description">
@@ -110,7 +110,7 @@
             {% for curCat in categories %}
               {% set itemList = services.itemList.getItemList( 'category', curCat.id, null, 1000 ).documents %}
                 {% for item in itemList %}
-                  {% if  item.data.item.storeSpecial.id == 3 and count <= 4 %}
+                  {% if  item.data.item.storeSpecial.id == 3 and count <= 3 %}
                     <div class="col-xs-12 col-sm-6 col-md-3 startArt">
                         {% include "Hermko::Category.Item.Partials.CategoryListItem" with { 'item': item } %}
                     </div>
@@ -119,7 +119,7 @@
                 {% endfor %}
             {% endfor %}
         </div>
-    <div class="row">
+    <div class="row homeArt">
             {% set count2 = 1 %}
             <div class="col-xs-12 col-sm-6 col-md-3 startArt">
               <div class="border">
@@ -132,7 +132,7 @@
             {% for curCat2 in categories %}
               {% set itemList2 = services.itemList.getItemList( 'category', curCat2.id, null, 1000 ).documents %}
                 {% for item2 in itemList2 %}
-                  {% if  item2.data.item.storeSpecial.id == 2 and count2 <= 4 %}
+                  {% if  item2.data.item.storeSpecial.id == 2 and count2 <= 3 %}
                     <div class="col-xs-12 col-sm-6 col-md-3 startArt">
                         {% include "Hermko::Category.Item.Partials.CategoryListItem" with { 'item': item2 } %}
                     </div>
