--- a/resources/views/Homepage/HermkoHomepage.twig
+++ b/resources/views/Homepage/HermkoHomepage.twig
@@ -99,7 +99,7 @@
 
     <div class="row homeArt">
             {% set count = 1 %}
-            <div class="col-xs-12 col-sm-6 col-md-3 startArt first">
+            <div class="col-xs-12 col-lg-3 startArt first">
               <div class="border">
                 <h2>Top Produkte</h2>
                 <div class="category-description">
@@ -121,7 +121,7 @@
         </div>
     <div class="row homeArt">
             {% set count2 = 1 %}
-            <div class="col-xs-12 col-sm-6 col-md-3 startArt first">
+            <div class="col-xs-12 col-lg-3 startArt first">
               <div class="border">
                 <h2>Neue Produkte</h2>
                 <div class="category-description">
