--- a/resources/views/Homepage/HermkoHomepage.twig
+++ b/resources/views/Homepage/HermkoHomepage.twig
@@ -111,7 +111,7 @@
               {% set itemList = services.itemList.getItemList( 'category', curCat.id, null, 1000 ).documents %}
                 {% for item in itemList %}
                   {% if  item.data.item.storeSpecial.id == 3 and count <= 3 %}
-                    <div class="col-xs-12 col-sm-6 col-md-3 startArt">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 startArt">
                         {% include "Hermko::Category.Item.Partials.CategoryListItem" with { 'item': item } %}
                     </div>
                     {% set count = count + 1 %}
@@ -133,7 +133,7 @@
               {% set itemList2 = services.itemList.getItemList( 'category', curCat2.id, null, 1000 ).documents %}
                 {% for item2 in itemList2 %}
                   {% if  item2.data.item.storeSpecial.id == 2 and count2 <= 3 %}
-                    <div class="col-xs-12 col-sm-6 col-md-3 startArt">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 startArt">
                         {% include "Hermko::Category.Item.Partials.CategoryListItem" with { 'item': item2 } %}
                     </div>
                     {% set count2 = count2 + 1 %}
