--- a/resources/views/Item/SingleItemView.twig
+++ b/resources/views/Item/SingleItemView.twig
@@ -4,7 +4,7 @@
 {{ component( "Hermko::Item.Components.ItemImageCarousel" ) }}
 {{ component( "Hermko::Item.Components.AddToWishList" ) }}
 {{ component( "Hermko::Item.Components.SingleItem" ) }}
-{{ component( "Hermko::Basket.Components.AddToBasket" ) }}
+{{ component( "Ceres::Basket.Components.AddToBasket" ) }}
 {{ component( "Hermko::ItemList.Components.CategoryItem" ) }}
 
 {{ component( "Ceres::Item.Components.OrderProperties" ) }}
