--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -85,6 +85,7 @@
 <link rel="stylesheet" href="https://www.hermko.de/layout/hermko/css/hermko.css" media="screen">
 <link rel="stylesheet" href="https://www.hermko.de/layout/hermko/css/print.css" media="print">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://www.hermko.de/layout/hermko/js/DoubleTapToGo.js"></script>
 <script type="text/javascript" src="https://www.hermko.de/layout/hermko/js/hermko.js"></script>
 
 {{ LayoutContainer.show("Ceres::Template.StyleOverwrite") }}
